fix: Falsh message center alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,13 @@ footer {
     color: black;
     font-size: 2rem;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.flash li{
+    padding: 0px 50px;
 }
 
 .success {
